--- a/Flagrum.Web/Features/Information/About.razor
+++ b/Flagrum.Web/Features/Information/About.razor
@@ -60,10 +60,11 @@
         <h3 class="text-accent1-200">@Localizer["Kizari"]</h3>
         <h3 class="text-grey-300 mt-10 mb-2">@Localizer["Contributors"]</h3>
         <span class="text-accent1-200" style="line-height: 2">
+            @Localizer["Rinual"]<br/>
             @Localizer["AsteriskAmpersand"]<br/>
             @Localizer["ImpatientTraveler"]<br/>
             @Localizer["KatelynnKittaly"]<br/>
-            @Localizer["Rinual"]<br/>
+            @Localizer["Chisa"]<br/>
             @Localizer["Sai"]
         </span>
     </div>
