--- a/Flagrum.Web/Features/AssetExplorer/Previews/ModelPreview.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Previews/ModelPreview.razor
@@ -65,15 +65,24 @@
 
             await Interop.ObserveElementResize(DotNetObjectReference.Create(this), "viewportContainer");
 
-            var left = await Interop.GetElementLeftOffset("viewportContainer");
-            var top = await Interop.GetElementTopOffset("viewportContainer");
-            var width = await Interop.GetElementWidth("viewportContainer");
-            var height = await Interop.GetElementHeight("viewportContainer");
-
-            WpfService.Resize3DViewport((int)left, (int)top, (int)width, (int)height);
+            try
+            {
+                var left = await Interop.GetElementLeftOffset("viewportContainer");
+                var top = await Interop.GetElementTopOffset("viewportContainer");
+                var width = await Interop.GetElementWidth("viewportContainer");
+                var height = await Interop.GetElementHeight("viewportContainer");
+                WpfService.Resize3DViewport((int)left, (int)top, (int)width, (int)height);
+            }
+            catch
+            {
+                // See https://github.com/Kizari/Flagrum/issues/33
+                // This prevents an edge case, no catch logic is required to continue normal operation
+            }
+            
             WpfService.Set3DViewportVisibility(true);
 
-            var gpubin = Item.Parent.Children.FirstOrDefault(n => n.Path.EndsWith(".gpubin"))!;
+            var gpubinQuery = Item.Name.Replace(".gmdl.gfxbin", ".gpubin").Replace(".gmdl", ".gpubin");
+            var gpubin = Item.Parent.Children.Single(n => n.Path.EndsWith(gpubinQuery))!;
             await WpfService.ChangeModel(Item.Data, gpubin.Data, Parent.CurrentView, gpubin.Path);
 
             _lastItem = Item;
@@ -96,7 +105,8 @@
 
             await Task.Run(async () =>
             {
-                var gpubin = Item.Parent.Children.FirstOrDefault(n => n.Path.EndsWith(".gpubin"))!;
+                var gpubinQuery = Item.Name.Replace(".gmdl.gfxbin", ".gpubin").Replace(".gmdl", ".gpubin");
+                var gpubin = Item.Parent.Children.Single(n => n.Path.EndsWith(gpubinQuery))!;
                 await InvokeAsync(async () => await WpfService.ChangeModel(Item.Data, gpubin.Data, Parent.CurrentView, gpubin.Path));
             });
             
