--- a/Flagrum.Web/Features/EarcMods/Index.razor
+++ b/Flagrum.Web/Features/EarcMods/Index.razor
@@ -31,15 +31,14 @@
     {
         <div class="flex flex-row items-center p-5 border-b border-t border-dark-600 sticky top-0 z-40 bg-dark">
             <div class="flex flex-row items-center">
-                <div class="bg-dark-600 shadow-md rounded row mr-10">
+                <div class="bg-dark-600 shadow-md rounded row mr-6">
                     <ModTypeButtonGroup Target="@EnabledState" OnItemSelected="SetEnabledState">
                         <ModTypeButton Text=@Localizer["ActiveMods"] Value="0"/>
                         <ModTypeButton Text=@Localizer["DisabledMods"] Value="1"/>
                     </ModTypeButtonGroup>
                 </div>
             </div>
-            <div class="flex-grow"></div>
-            <DropdownButton CssClass="mr-4" Icon="filter_alt" DropdownWidth="150"
+            <DropdownButton Icon="filter_alt" DropdownWidth="150"
                             Text=@($"{Localizer["Filter"]} {(Category == -1 ? Localizer["CategoryAll"] : Localizer[$"Category{(ModCategory)Category}"])}")>
                 <DropdownButtonItem Text="@Localizer["CategoryAll"]" OnClick="() => { SetCategory(-1); return Task.CompletedTask; }"/>
                 @foreach (var category in Enum.GetValues<ModCategory>().Where(e => e != ModCategory.Other).OrderBy(e => e.ToString()))
@@ -48,8 +47,9 @@
                 }
                 <DropdownButtonItem Text="@Localizer["CategoryOther"]" OnClick="() => { SetCategory((int)ModCategory.Other); return Task.CompletedTask; }"/>
             </DropdownButton>
+            <div class="flex-grow"></div>
             <Button Icon="add" Text=@Localizer["CreateMod"] CssClass="mr-4" OnClick="@(() => ModCardModal.Open(0))"/>
-            <Button Icon="upload" Variant="true" Text=@Localizer["InstallFromZip"] OnClickAsync="Install"/>
+            <Button Icon="upload" Text=@Localizer["InstallFromZip"] OnClickAsync="Install"/>
         </div>
     }
     <LoadingView IsLoading="IsLoading" Text="@LoadingText" CssClass="h-full">
