--- a/Flagrum.Web/Features/EarcMods/Modals/ModCardModal.razor
+++ b/Flagrum.Web/Features/EarcMods/Modals/ModCardModal.razor
@@ -85,11 +85,11 @@
     private BlazoredTextEditor Editor { get; set; }
     private string ImageName { get; set; } = "current_earc_preview";
 
-    public async Task Open(string modId)
+    public async Task Open(int modId)
     {
         var currentPreviewPath = $@"{IOHelper.GetWebRoot()}\images\current_earc_preview.png";
 
-        if (modId == null)
+        if (modId == 0)
         {
             var defaultPreviewPath = $@"{IOHelper.GetExecutingDirectory()}\Resources\earc.png";
             File.Copy(defaultPreviewPath, currentPreviewPath, true);
@@ -143,7 +143,7 @@
 
     private async Task Submit()
     {
-        var isNew = Mod.Id == null;
+        var isNew = Mod.Id == 0;
 
         Mod.Readme = await Editor.GetHTML();
         await Mod.SaveCardOnly(Context);
